safari doesn’t wrap the flex box correctly with this width in there, removing it doesn’t seem to hurt anything

--- a/components/sunset/sunset.scss
+++ b/components/sunset/sunset.scss
@@ -71,7 +71,6 @@
         padding-top: $spacing--200;
         padding-bottom: $spacing--200;
         &-links {
-            width: 30%;
             min-width:300px;
             align-content: center;
             display:flex;
